--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello worlddd!</p>
+    <h1>Hello worlddd!</h1>
+    <h2>Hello!</h2>
     <script src="js/script.js"></script>
 </body>
 </html>
