--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello worlddd!</h1>
     <h2>Hello!</h2>
+    <h3>Title</h3>
     <script src="js/script.js"></script>
 </body>
 </html>
