--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello worlddd!</h1>
-    <h2>Hello Wo</h2>
+    <h2>Hello Wolddddddddddd</h2>
     <h3>Title</h3>
     <script src="js/script.js"></script>
 </body>
